# Rust-DiscordBot

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: server.rs
