[package]
name = "discordbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2"
actix-http = "2"
actix-web = "4.0.0-beta.8" 
futures = "0.3"
serenity = {version="0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false